# ffmpeg-android-test

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ffmpeg/: android_log.h  ffmpeg_util.cc  ffmpeg_util.h
app/src/main/cpp/ffmpeglib/include/: jconfig.h
app/src/main/java/cookbook/testjni/: MainActivity.java  MyApplication.java
app/src/main/res/layout/: activity_main.xml
